src/FinancialForce Accounting/objects/codaCashMatchingHistory__c.object
<CustomObject>
    <customHelpPage>codahelpcashmatchinghistory</customHelpPage>
    <description>Records the activities that take place during the payment, discounting or writing-off of a payable transaction line.</description>
    <fields>
        <fullName>AccountOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Account Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A cash matching history record will refer to the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>The reason for the creation of the record.</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Currency Write-off</fullName>
                </value>
                <value>
                    <fullName>Undo Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscountDate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Document Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeOutstandingValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 2</description>
        <label>Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See note 1</description>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sequential number – the order of creation</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatchedType__c</fullName>
        <label>Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matching Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date when the line was matched in allocation</description>
        <label>Matching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking matched lines</description>
        <label>Matching Reference</label>
        <referenceTo>codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Matching Reference)</relationshipLabel>
        <relationshipName>MatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A transaction line may have many cash matching history records if its type is account; analysis and tax lines do not have a history</description>
        <label>Transaction Line Item</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Cash Matching Histories</relationshipLabel>
        <relationshipName>CashMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UndoMatchingReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference linking un-matched lines</description>
        <label>Undo Matching Reference</label>
        <referenceTo>codaMatchingReference__c</referenceTo>
        <relationshipLabel>Cash Matching Histories (Undo Matching Reference)</relationshipLabel>
        <relationshipName>UndoMatchingHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UndoReason__c</fullName>
        <description>The reason for matching being undone</description>
        <label>Undo Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matching Error</fullName>
                </value>
                <value>
                    <fullName>Remittance Advice Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Cash Matching History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cash Matching History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Matching Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>